Fixed layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -384,7 +384,7 @@ horarios{
 
     .modal-content {
       width: 230px;
-      height: 350px;
+      height: 340px;
       background-color: #082349 !important;
       margin: 0 auto;
   }
